IGNITE-16404 Enable Unsafe for netty