@@ -1024,7 +1024,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>-Djava.util.logging.config.file=../../config/java.util.logging.properties</argLine>
+                    <argLine>
+                        --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
+                        -Dio.netty.tryReflectionSetAccessible=true
+                        -Djava.util.logging.config.file=../../config/java.util.logging.properties
+                    </argLine>
                     <excludes>
                         <exclude>%regex[.*(It)[A-Z].*]</exclude>
                         <!-- Exclude inner classes (preserve default behaviour) -->
@@ -1040,7 +1044,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <configuration>
-                    <argLine>-Djava.util.logging.config.file=../../config/java.util.logging.properties</argLine>
+                    <argLine>
+                        --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
+                        -Dio.netty.tryReflectionSetAccessible=true
+                        -Djava.util.logging.config.file=../../config/java.util.logging.properties
+                    </argLine>
                     <useModulePath>false</useModulePath>
                     <includes>
                         <include>%regex[.*(It)[A-Z].*]</include>
